body font color change. navbar padding and color changes. modal alignment fix. button hover changes.

--- a/css/animations.css
+++ b/css/animations.css
@@ -1,9 +1,55 @@
+.animate-hover {
+  position: absolute;
+  animation-duration: 4000ms;
+  animation-iteration-count: infinite;
+  animation-name: animation-hover;
+  width: 100%;
+}
+
+.animate-hover-container {
+  position: relative;
+  min-height: 100px;
+}
+
 @keyframes animation-hover {
   0% {
-    top: -15px; }
+    margin-top: 0;
+  }
   50% {
-    top: 0; }
+    margin-top: -15px;
+  }
   100% {
-    top: -15px; } }
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  :not(.noFade) .ng-hide-add {
+    animation-name: fade-out;
+    animation-duration: 1500ms;
+    animation-iteration-count: 1;
+  }
+
+  :not(.noFade) .ng-hide-remove {
+    animation-name: fade-in;
+    animation-duration: 1500ms;
+    animation-iteration-count: 1;
+  }
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 
 /*# sourceMappingURL=animations.css.map */
