--- a/css/index.scss
+++ b/css/index.scss
@@ -4,6 +4,7 @@
 $colorPrimary: #00717B;
 $colorPrimaryDark: #032225;
 $colorPrimaryLight: #00A8BA;
+$textColor: #032225;
 
 $browser-context: 16; // Default
 
@@ -44,6 +45,7 @@ $browser-context: 16; // Default
 
 body {
   font-family: 'Lato', sans-serif;
+  color: $textColor;
   letter-spacing: 0.025rem;
   line-height: 1.533331;
 }
@@ -270,9 +272,17 @@ a:not([href]):not([tabindex]):hover {
   }
 }
 
+.full-width {
+  width: 100vw;
+  max-width: 100%;
+}
 #created-on-vera {
   .container {
     position: relative;
+  }
+  .col {
+    min-width: 432px;
+    max-width: 432px;
   }
   .scrollable {
     img {
@@ -286,6 +296,10 @@ a:not([href]):not([tabindex]):hover {
 #press {
   .container {
     position: relative;
+  }
+  .col {
+    min-width: 432px;
+    max-width: 432px;
   }
   .panel-rounded {
     height: 100%;
@@ -442,43 +456,56 @@ footer {
 /* ---- NavBar ---- */
 
 .navbar {
-  transition: background-color 250ms;
+  padding-top: rem(50);
+  transition: background-color 250ms, padding-top, 250ms;
   .collapsed,
   .show {
     transition: all 200ms;
   }
   .nav-link {
     position: relative;
-    font-szie: rem(15);
+    font-size: rem(15);
     color: #FFFFFF;
-    font-weight: 400;
+    font-weight: 300;
     transition: color 250ms;
     &:hover {
       &:before {
         opacity: 1.0;
       }
     }
-    &.active,
-    &:active {
-      color: $colorPrimaryLight;
+    &.active {
+      font-weight: bold;
     }
     &.active:before,
+    &:active:before {
+      background-color: $colorPrimaryLight;
+    }
     &:before {
       position: absolute;
       content: "";
       display: block;
-      background-color: $colorPrimaryLight;
       width: calc(100% - 1rem);
       height: 2px;
       bottom: 5px;
       opacity: 0.0;
       transition: opacity 250ms;
+      background-color: #FFF;
     }
   }
   &.scrolled {
+    padding-top: 0;
+    padding-bottom: 0;
     background-color: #FFF;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.025);
     .nav-link {
-      color: #7f7f7f;
+      color: $textColor;
+      &:before {
+        background-color: $textColor;
+      }
+      &.active:before,
+      &:active:before {
+        background-color: $colorPrimaryLight;
+      }
     }
   }
 }
@@ -524,7 +551,7 @@ footer {
   box-shadow: 0 3px 15px #00A8BA33;
   padding: rem(9) rem(39) rem(10);
   &:hover {
-    background-color: #35c0cf;
+    background-color: $colorPrimaryLight;
     color: #FFF;
   }
 }
@@ -632,3 +659,25 @@ footer {
     font-size: 1rem;
   }
 }
+
+/* ---- ng Override CSS ---- */
+
+body .ngdialog.ngdialog-theme-default .ngdialog-content {
+  width: initial;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.ngdialog.ngdialog-theme-default {
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+body .ngdialog.ngdialog-theme-default .ngdialog-close:before {
+  right: 0;
+  padding-top: 5px;
+}
+
+/* ---- End ng Override CSS ---- */
